--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <br>
    <br>
 
-   <div class="bg-primary " style="padding-left: 15px"  id="b">
+   <div class="bg-primary ml-5 " style="padding-left: 15px"  id="b">
     asdsadas
 
    </div>
