--- a/eb.html
+++ b/eb.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
           <div class="col-md-2 text-center bg-info ">
-           <a href="index.html">Ana Sayfa </a>
+           <a href="hakkında.html">Ana Sayfa </a>
           </div>
           <div class="col-md-2 text-center bg-info ">
            <a href="sehrim.html">Şehrim</a>
