--- a/miras.html
+++ b/miras.html
@@ -25,7 +25,7 @@
                <a href="sehrim.html">Şehrim</a>
                </div>
                <div class="col-md-2 text-center bg-info ">
-                 <a href="miras.html">Mirasımız</a>
+                 <a href="hakkında.html">Anasayfa</a>
                </div>
                <div class="col-md-2 text-center bg-info ">
                  <a href="ilgi.html">İlgi Alanları</a>
