--- a/sehrim.html
+++ b/sehrim.html
@@ -54,7 +54,7 @@
                <a href="eb.html">Eğitim Bilgileri</a>
               </div>
               <div class="col-md-2 text-center bg-info ">
-               <a href="index.html">Anasayfa</a>
+               <a href="hakkında.html">Anasayfa</a>
                </div>
                <div class="col-md-2 text-center bg-info ">
                  <a href="miras.html">Mirasımız</a>
