--- a/iletisim.html
+++ b/iletisim.html
@@ -35,7 +35,7 @@
 
     <center><h1> İletişim</h1></center>
         <div class="container" style="text-align: center;">
-          <form method="POST" action="hakkında.html">
+          <form method="POST" action="yonlendır2.php">
               <table>
                 <tr>
                     <td>  Ad </td><td>:</td><td><input type="text" name="ad"></td>
@@ -44,7 +44,7 @@
                     <td> Soyad</td><td>:</td><td> <input type="text" name="soyad"></td>
                 </tr>
                 <tr>
-                    <td>Cinsiyet</td><td> :</td><td><input type="radio" name="cinsiyet" value="erkek" checked>Erkek<input type="radio" name="cinsiyet" value="kadin">Kadın</td>
+                    <td>Cinsiyet</td><td> :</td><td><input type="radio" name="cinsiyet" value="erkek" checked>Erkek<input type="radio" name="cinsiyet" value="kadın">Kadın</td>
                 </tr>
                 <tr>
                     <td> Email</td><td> :</td><td><input type="email" name="email"></td>
