--- a/iletisim.html
+++ b/iletisim.html
@@ -1,41 +1,48 @@
 <!doctype html>
 <html lang="en">
   <head>
-      <style>
-             body{background-color:#333;padding:18px;color:#fff; background-image: url("arkaplan.jpg")}
-      </style>
+   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>İletişim</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
   </head>
-  <body>
-    <center>
-        <div class="container">
-          <div class="row">
-              <div class="col-md-2 text-center bg-info ">
-               <a href="eb.html">Eğitim Bilgileri</a>
-              </div>
-              <div class="col-md-2 text-center bg-info ">
-               <a href="sehrim.html">Şehrim</a>
-               </div>
-               <div class="col-md-2 text-center bg-info ">
-                 <a href="miras.html">Mirasımız</a>
-               </div>
-               <div class="col-md-2 text-center bg-info ">
-                 <a href="ilgi.html">İlgi Alanları</a>
-               </div>
-               <div class="col-md-2 text-center bg-info ">
-                 <a href="hakkında.html">Hakkında</a>
-               </div>
-          </div>
+  <body id="iletisim">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-3 mb-lg-0">
+          
+            <li class="nav-item">
+              <a class="nav-link" href="eb.html">Eğitim Bilgileri</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sehrim.html">Şehrim</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Miras.html">Mirasımız</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ilgi.html">İlgi Alanları</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hakkında.html">Ana Sayfa</a>
+            </li>
+          </ul>
+   
+        </div>
       </div>
-      </center>
+  </nav>
 
 
     <center><h1> İletişim</h1></center>
         <div class="container" style="text-align: center;">
-          <form method="POST" action="yonlendır2.php">
+          <form method="POST" action="hakkında.html">
               <table>
                 <tr>
                     <td>  Ad </td><td>:</td><td><input type="text" name="ad"></td>
@@ -44,7 +51,7 @@
                     <td> Soyad</td><td>:</td><td> <input type="text" name="soyad"></td>
                 </tr>
                 <tr>
-                    <td>Cinsiyet</td><td> :</td><td><input type="radio" name="cinsiyet" value="erkek" checked>Erkek<input type="radio" name="cinsiyet" value="kadın">Kadın</td>
+                    <td>Cinsiyet</td><td> :</td><td><input type="radio" name="cinsiyet" value="erkek" checked>Erkek<input type="radio" name="cinsiyet" value="kadin">Kadın</td>
                 </tr>
                 <tr>
                     <td> Email</td><td> :</td><td><input type="email" name="email"></td>
