--- a/index.html
+++ b/index.html
@@ -6,18 +6,48 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Login</title>
+    <style>
+      body{
+        background-image: url("arkaplanss.jpg");
+      }
+    </style>
   </head>
-  <body>
+  <body id="index">
 
-         <form method="POST" action="yonlendir.php">
 
-            Email :<input type="email" name="emailim" required ><br>
-            Şifre :   <input type="password" name="passim" requierd ><br>
-                    <input type="submit" value="Gönder">
+    <div class="box">
+      <table>
+        <form method="POST" action="yonlendir.php">
+          <p class="welcome"><center><b>Hoşgeldiniz</b> </center></p>
+          <tr>
+            <td>Email</td>
+            <td> : </td>
+            <td> <input type="email" name="emailim" required ></td>
+          </tr>
+          <tr>
+            <td> Şifre</td>
+            <td> :</td>
+            <td>   <input type="password" name="passim" requierd ></TD>
+          </tr>
+          <tr>
+            <td></td><td></td><td> <input type="submit" value="Gönder"></td>
+          </tr>
 
           </form>
+      </table>
+         
+    </div>
+
+
+
+
+
+
+
+
+
 
 
 
