--- a/iletisim.html
+++ b/iletisim.html
@@ -39,10 +39,9 @@
       </div>
   </nav>
 
-
     <center><h1> İletişim</h1></center>
-        <div class="container" style="text-align: center;">
-          <form method="POST" action="hakkında.html">
+        <div class="container" style="text-align: center;" >
+          <form method="POST" action="yonlendır2.php"   >
               <table>
                 <tr>
                     <td>  Ad </td><td>:</td><td><input type="text" name="ad"></td>
@@ -110,5 +109,6 @@
    
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+ 
   </body>
 </html>
